--- a/css/wooden-fish.css
+++ b/css/wooden-fish.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     background-color: black;
+    overflow: hidden;
 }
 .container {
     height: 100vh;
@@ -10,4 +11,37 @@ body {
 }
 img {
     cursor: pointer;
+}
+.msg-box {
+    opacity: 1;
+    /* color: black; */
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+}
+.merits-accumulate-animation{
+    height: 0.6rem;
+    line-height: 0.6rem;
+    animation: msgBox .5s forwards;
+    transform: translateY(0px);
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    left: 48%;
+}
+
+
+@keyframes msgBox {
+    0% {
+        opacity: 0;
+        transform: translateY(0px);
+    }
+    50% {
+        opacity: 1;
+        transform: translateY(-50px) scale(1.1);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(-80px);
+    }
 }
